<resources>
    <string name="app_name">TouristGuide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Restaurant</string>
    <string name="museum">Museum</string>
    <string name="natural">Natural</string>
    <string name="sight_seeing">Sight Seeing</string>
    <string name="shopping">Shopping</string>
    <string name="where_would_you_like_to_go">Where would you like to go ?</string>
    <string name="all_result">All result</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="rate">Rate</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="my_home">My Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="information">Information</string>
    <string name="description">Description</string>
    <string name="history">History</string>
    <string name="direction">Direction</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="introduction">Introduction</string>
    <string name="facebook">Facebook</string>
    <string name="call">Call</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <string name="eat_and_drink">Eat and Drink</string>
    <string name="nightlife">Nightlife</string>
    <string name="activity">Activity</string>
    <string name="airport">Airport</string>
    <string name="bank">Bank</string>
    <string name="username_demo">Kane Vinova</string>
    <string name="email_demo">kane@vinova.com.sg</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="exit_app">Exit App</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tourist_guide">Tourist Guide</string>
    <string name="adventure_is_worthwhile">Adventure is worthwhile</string>
    <string name="traveling_it_leaves_you_speechless_then_turns_you_into_a_storyteller">Traveling – it leaves you speechless, then turns you into a storyteller</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="reset_password">Reset Password</string>
    <string name="day_of_birth_select">%1$d/%2$d/%3$d</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_feedback_here">Enter your feedback here!</string>
    <string name="write_your_feedback">Write your feedback…</string>
    <string name="place_detail">Place Detail</string>
    <string name="slide_index">%1$d/%2$d</string>
    <string name="slide_index_init">1/%1$d</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>


</resources>