<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/summer_green"
    tools:context=".ui.search.SearchResultFragment">

    <TextView
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/distance_8"
        android:layout_marginTop="@dimen/distance_16"
        android:text="@string/search"
        android:textSize="@dimen/text_size_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="@dimen/distance_16"
        android:padding="@dimen/padding_4"
        android:layout_marginStart="@dimen/distance_8"
        android:layout_marginEnd="@dimen/distance_8"
        android:textColorHint="@android:color/black"
        android:background="@color/white"
        android:hint="@string/hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/distance_8"
        android:layout_marginTop="@dimen/distance_16"
        android:text="@string/all_result"
        android:textSize="@dimen/text_size_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/distance_16"
        android:id="@+id/rvListPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_popular_place" />

</LinearLayout>